--- a/scripts/centos-7-kickstart.cfg
+++ b/scripts/centos-7-kickstart.cfg
@@ -3,9 +3,9 @@ firewall --disabled
 install
 cdrom
 
-lang en_US.UTF-8
-keyboard us
-timezone  Europe/Rome
+lang en_GB.UTF-8
+keyboard uk
+timezone  Europe/London
 
 network --bootproto=dhcp
 rootpw vagrant
@@ -40,6 +40,4 @@ yum install -y sudo
 echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
 sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
 
-rpm -ivh http://yum.puppetlabs.com/puppetlabs-release-el-7.noarch.rpm
-yum install -y puppet
 %end
